crates/rome_cli/tests/snapshots/main_commands_lint/ignore_configured_globals.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "javascript": {
    "globals": ["foo", "bar"]
  }
}
```

## `fix.js`

```js
foo.call(); bar.call();
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


