crates/rome_cli/tests/snapshots/main_commands_lint/ignore_vcs_ignored_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `.git`

```git

```

## `.gitignore`

```gitignore

file2.js

```

## `file1.js`

```js
array.map(sentence => sentence.split(' ')).flat();
```

## `file2.js`

```js
foo.call(); bar.call();
```

## `rome.json`

```json
{
        "vcs": {
            "enabled": true,
            "clientKind": "git",
            "useIgnoreFile": true
        }
    }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file1.js:1:1 lint/complexity/useFlatMap  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The call chain .map().flat() can be replaced with a single .flatMap() call.
  
  > 1 │ array.map(sentence => sentence.split(' ')).flat();
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Replace the chain with .flatMap().
  
  - array.map(sentence·=>·sentence.split('·')).flat();
  + array.flatMap(sentence·=>·sentence.split('·'));
  

```

```block
file1.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
Checked 1 file(s) in <TIME>
```


